# botman

./: .gitignore  CMakeLists.txt  README.md  file.txt  map.txt  test.txt
assets/: bug.aseprite  bug_test.aseprite  empty.aseprite  gold_coin.aseprite  hammer.aseprite  portal.aseprite  robot.aseprite  spawner.aseprite  start.aseprite  wall.aseprite
maps/: .txt  .txt  some_map.txt  test.txt  ttt.txt  wtf.txt
src/: Bug.cpp  Bug.hpp  GameState.hpp  Ghost.cpp  Ghost.hpp  Pacman.cpp  Pacman.hpp  Robot.cpp  Robot.hpp  bug.cpp  bug.hpp  constants.hpp  game.cpp  game.hpp  main.cpp  map.cpp  map.hpp  misc.cpp  misc.hpp  movement.hpp  path.cpp  path.hpp  raygui_impl.c  robot.cpp  robot.hpp  texture_manager.cpp  texture_manager.hpp  textures.cpp  textures.hpp
